2007-04-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.d, evolver.ad)
	(evolver.ade, evolver.e, evolver.de, evolver.l, evolver.dl)
	(evolver.el, evolver.r, evolver.ar, evolver.di, evolvecr.adi) :
	verbose option added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_d)
	(R_igraph_evolver_ad, R_igraph_evolver_ade, R_igraph_evolver_e)
	(R_igraph_evolver_de, R_igraph_evolver_l, R_igraph_evolver_dl)
	(R_igraph_evolver_el, R_igraph_evolver_r, R_igraph_evolver_ar)
	(R_igraph_evolver_r, R_igraph_evolver_ar, R_igraph_evolver_di)
	(R_igraph_evolver_adi) : verbose option added
	
	* interfaces/R/src/rinterface.c 
	(R_igraph_before2, R_igraph_after2): added

2007-04-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.adi) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_adi) : added

2007-04-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.di) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_di) : added	

	* interfaces/R/igraph/R/revolver.R (evolver.ar) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_ar) : added	

	* interfaces/R/igraph/R/revolver.R (evolver.r) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_r) : added	

	* interfaces/R/igraph/R/revolver.R (evolver.d, evolver.ad) : 
	default parameter values changed 

	* interfaces/R/igraph/R/revolver.R (evolver.el) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_el) : added	

2007-04-19  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.dl) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_dl) : added	

	* interfaces/R/igraph/R/revolver.R (evolver.l) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_l) : added

	* interfaces/R/igraph/R/revolver.R (evolver.de) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_de) : added

	* interfaces/R/igraph/R/revolver.R (evolver.e) : added