@@ -835,10 +835,20 @@ int R_igraph_progress_handler(const char *message, igraph_real_t percent,
 			      void * data) {
   static igraph_real_t last=0;
   if (percent == 0) {
+    int i, l=strlen(message);
     last=0;
+    fprintf(stderr, 
+	    "                    : --------------------------------------------------|\r");
+    for (i=0; i<l && i<20; i++) {
+      fputc(message[i], stderr);
+    }
+    for (; i<20; i++) {
+      fputc(' ', stderr);
+    }
+    fputc(':', stderr); fputc(' ', stderr);
   } 
   while (last < percent) {
-    fputc('#', stderr);
+    fputc('*', stderr);
     last+=2;
   }
   return 0;
@@ -859,7 +869,6 @@ R_INLINE void R_igraph_before2(SEXP verbose, const char *str) {
   R_igraph_attribute_oldtable=
     igraph_i_set_attribute_table(&R_igraph_attribute_table);
   if (LOGICAL(verbose)[0]) {
-    fprintf(stderr, "%s", str);
     R_igraph_oldprogress=igraph_set_progress_handler(R_igraph_progress_handler);
   }
 }  
@@ -1793,7 +1802,7 @@ SEXP R_igraph_recent_degree_game(SEXP pn, SEXP ppower, SEXP pwindow,
   
 SEXP R_igraph_layout_kamada_kawai(SEXP graph, SEXP pniter, SEXP pinitemp, 
 				  SEXP pcoolexp, SEXP pkkconst, SEXP psigma, 
-				  SEXP pverbose) {
+				  SEXP verbose) {
   
   igraph_t g;
   igraph_integer_t niter=REAL(pniter)[0];
@@ -1802,15 +1811,9 @@ SEXP R_igraph_layout_kamada_kawai(SEXP graph, SEXP pniter, SEXP pinitemp,
   igraph_real_t kkconst=REAL(pkkconst)[0];
   igraph_real_t sigma=REAL(psigma)[0];
   igraph_matrix_t res;
-  igraph_bool_t verbose=LOGICAL(pverbose)[0];
-  igraph_progress_handler_t *oldprogress;
   SEXP result;
   
-  R_igraph_before();
-  if (verbose) {
-    fprintf(stderr, "KK layout: ");
-    oldprogress=igraph_set_progress_handler(R_igraph_progress_handler);
-  }
+  R_igraph_before2(verbose, "KK layout");
   
   R_SEXP_to_igraph(graph, &g);
   igraph_matrix_init(&res, 0, 0);
@@ -1819,11 +1822,7 @@ SEXP R_igraph_layout_kamada_kawai(SEXP graph, SEXP pniter, SEXP pinitemp,
   PROTECT(result=R_igraph_matrix_to_SEXP(&res));
   igraph_matrix_destroy(&res);
   
-  if (verbose) {
-    igraph_set_progress_handler(oldprogress);
-    fputc('\n', stderr);
-  }
-  R_igraph_after();
+  R_igraph_after2(verbose);
   
   UNPROTECT(1);
   return result;
@@ -1831,7 +1830,7 @@ SEXP R_igraph_layout_kamada_kawai(SEXP graph, SEXP pniter, SEXP pinitemp,
 
 SEXP R_igraph_layout_kamada_kawai_3d(SEXP graph, SEXP pniter, SEXP pinitemp,
 				     SEXP pcoolexp, SEXP pkkconst, 
-				     SEXP psigma, SEXP pverbose) {
+				     SEXP psigma, SEXP verbose) {
   igraph_t g;
   igraph_integer_t niter=REAL(pniter)[0];
   igraph_real_t initemp=REAL(pinitemp)[0];
@@ -1839,15 +1838,9 @@ SEXP R_igraph_layout_kamada_kawai_3d(SEXP graph, SEXP pniter, SEXP pinitemp,
   igraph_real_t kkconst=REAL(pkkconst)[0];
   igraph_real_t sigma=REAL(psigma)[0];
   igraph_matrix_t res;
-  igraph_bool_t verbose=LOGICAL(pverbose)[0];
-  igraph_progress_handler_t *oldprogress;
   SEXP result;
   
-  R_igraph_before();
-  if (verbose) {
-    fprintf(stderr, "3D KK layout: ");
-    oldprogress=igraph_set_progress_handler(R_igraph_progress_handler);
-  }
+  R_igraph_before2(verbose, "3D KK layout");
   
   R_SEXP_to_igraph(graph, &g);
   igraph_matrix_init(&res, 0, 0);
@@ -1856,11 +1849,7 @@ SEXP R_igraph_layout_kamada_kawai_3d(SEXP graph, SEXP pniter, SEXP pinitemp,
   PROTECT(result=R_igraph_matrix_to_SEXP(&res));
   igraph_matrix_destroy(&res);
   
-  if (verbose) {
-    igraph_set_progress_handler(oldprogress);
-    fputc('\n', stderr);
-  }
-  R_igraph_after();
+  R_igraph_after2(verbose);
   
   UNPROTECT(1);
   return result;
@@ -1902,7 +1891,7 @@ SEXP R_igraph_layout_fruchterman_reingold_grid(SEXP graph, SEXP mat,
 					       SEXP pmaxdelta, SEXP parea,
 					       SEXP pcoolexp, SEXP prepulserad,
 					       SEXP pcellsize, SEXP puseseed,
-					       SEXP pverbose) {
+					       SEXP verbose) {
 
   igraph_t g;
   igraph_matrix_t res;
@@ -1913,15 +1902,9 @@ SEXP R_igraph_layout_fruchterman_reingold_grid(SEXP graph, SEXP mat,
   igraph_real_t repulserad=REAL(prepulserad)[0];
   igraph_real_t cellsize=REAL(pcellsize)[0];
   igraph_bool_t use_seed=LOGICAL(puseseed)[0];
-  igraph_bool_t verbose=LOGICAL(pverbose)[0];
-  igraph_progress_handler_t *oldprogress;
   SEXP result;
   
-  R_igraph_before();
-  if (verbose) {
-    fprintf(stderr, "Grid-FR layout: ");
-    oldprogress=igraph_set_progress_handler(R_igraph_progress_handler);
-  }
+  R_igraph_before2(verbose, "Grid-FR layout");
 
   R_SEXP_to_igraph(graph, &g);
   if (use_seed) {
@@ -1935,11 +1918,7 @@ SEXP R_igraph_layout_fruchterman_reingold_grid(SEXP graph, SEXP mat,
   PROTECT(result=R_igraph_matrix_to_SEXP(&res));
   igraph_matrix_destroy(&res);
   
-  if (verbose) {
-    igraph_set_progress_handler(oldprogress);
-    fputc('\n', stderr);
-  }
-  R_igraph_after();
+  R_igraph_after2(verbose);
   
   UNPROTECT(1);
   return result;
@@ -3196,7 +3175,7 @@ SEXP R_igraph_simplify(SEXP graph, SEXP pmultiple, SEXP ploops) {
 SEXP R_igraph_layout_fruchterman_reingold(SEXP graph, SEXP pniter, 
 					  SEXP pmaxdelta, SEXP parea,
 					  SEXP pcoolexp, SEXP prepulserad, 
-					  SEXP pverbose) {
+					  SEXP verbose) {
   igraph_t g;
   igraph_integer_t niter=REAL(pniter)[0];
   igraph_real_t maxdelta=REAL(pmaxdelta)[0];
@@ -3204,15 +3183,9 @@ SEXP R_igraph_layout_fruchterman_reingold(SEXP graph, SEXP pniter,
   igraph_real_t coolexp=REAL(pcoolexp)[0];
   igraph_real_t repulserad=REAL(prepulserad)[0];
   igraph_matrix_t res;
-  igraph_bool_t verbose=LOGICAL(pverbose)[0];
-  igraph_progress_handler_t *oldprogress;
   SEXP result;
   
-  R_igraph_before();
-  if (verbose) {
-    fprintf(stderr, "FR layout: ");
-    oldprogress=igraph_set_progress_handler(R_igraph_progress_handler);
-  }
+  R_igraph_before2(verbose, "FR layout");
   
   R_SEXP_to_igraph(graph, &g);
   igraph_matrix_init(&res, 0, 0);
@@ -3221,11 +3194,7 @@ SEXP R_igraph_layout_fruchterman_reingold(SEXP graph, SEXP pniter,
   PROTECT(result=R_igraph_matrix_to_SEXP(&res));
   igraph_matrix_destroy(&res);
   
-  if (verbose) {
-    igraph_set_progress_handler(oldprogress);
-    fputc('\n', stderr);
-  }
-  R_igraph_after();
+  R_igraph_after2(verbose);
   
   UNPROTECT(1);
   return result;
@@ -3234,7 +3203,7 @@ SEXP R_igraph_layout_fruchterman_reingold(SEXP graph, SEXP pniter,
 SEXP R_igraph_layout_fruchterman_reingold_3d(SEXP graph, SEXP pniter, 
 					     SEXP pmaxdelta, SEXP parea,
 					     SEXP pcoolexp, SEXP prepulserad,
-					     SEXP pverbose) {
+					     SEXP verbose) {
   igraph_t g;
   igraph_integer_t niter=REAL(pniter)[0];
   igraph_real_t maxdelta=REAL(pmaxdelta)[0];
@@ -3242,15 +3211,9 @@ SEXP R_igraph_layout_fruchterman_reingold_3d(SEXP graph, SEXP pniter,
   igraph_real_t coolexp=REAL(pcoolexp)[0];
   igraph_real_t repulserad=REAL(prepulserad)[0];
   igraph_matrix_t res;
-  igraph_bool_t verbose=LOGICAL(pverbose)[0];
-  igraph_progress_handler_t *oldprogress;
   SEXP result;
   
-  R_igraph_before();
-  if (verbose) {
-    fprintf(stderr, "3D FR layout: ");
-    oldprogress=igraph_set_progress_handler(R_igraph_progress_handler);
-  }
+  R_igraph_before2(verbose, "3D FR layout");
   
   R_SEXP_to_igraph(graph, &g);
   igraph_matrix_init(&res, 0, 0);
@@ -3259,11 +3222,7 @@ SEXP R_igraph_layout_fruchterman_reingold_3d(SEXP graph, SEXP pniter,
   PROTECT(result=R_igraph_matrix_to_SEXP(&res));
   igraph_matrix_destroy(&res);
   
-  if (verbose) {
-    igraph_set_progress_handler(oldprogress);
-    fputc('\n', stderr);
-  }
-  R_igraph_after();
+  R_igraph_after2(verbose);
   
   UNPROTECT(1);
   return result;
@@ -3986,7 +3945,7 @@ SEXP R_igraph_isoclass_create(SEXP psize, SEXP pnumber, SEXP pdirected) {
   return result;
 }
 
-SEXP R_igraph_layout_merge_dla(SEXP graphs, SEXP layouts, SEXP pverbose) {
+SEXP R_igraph_layout_merge_dla(SEXP graphs, SEXP layouts, SEXP verbose) {
 
   igraph_vector_ptr_t graphvec;
   igraph_vector_ptr_t ptrvec;
@@ -3994,15 +3953,9 @@ SEXP R_igraph_layout_merge_dla(SEXP graphs, SEXP layouts, SEXP pverbose) {
   igraph_matrix_t *mats;
   igraph_matrix_t res;
   long int i;
-  igraph_bool_t verbose=LOGICAL(pverbose)[0];
-  igraph_progress_handler_t *oldprogress;
   SEXP result;
   
-  R_igraph_before();
-  if (verbose) {
-    fprintf(stderr, "Merge layouts: ");
-    oldprogress=igraph_set_progress_handler(R_igraph_progress_handler);
-  }
+  R_igraph_before2(verbose, "Merge layouts");
   
   igraph_vector_ptr_init(&graphvec, GET_LENGTH(graphs));
   igraph_vector_ptr_init(&ptrvec, GET_LENGTH(layouts));
@@ -4024,11 +3977,7 @@ SEXP R_igraph_layout_merge_dla(SEXP graphs, SEXP layouts, SEXP pverbose) {
   PROTECT(result=R_igraph_matrix_to_SEXP(&res));
   igraph_matrix_destroy(&res);
   
-  if (verbose) {
-    igraph_set_progress_handler(oldprogress);
-    fputc('\n', stderr);
-  }
-  R_igraph_after();
+  R_igraph_after2(verbose);
   
   UNPROTECT(1);
   return result;
